--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,8 @@ img.profile {
 
 body {
   background-attachment: fixed;
-  background-image: url("../img/Group_190.jpg");
+  background-color: #CBCCCB;
+/*  background-image: url("../img/Group_190.jpg");*/
   background-position: center;
   background-size: cover;
 }
@@ -199,6 +200,7 @@ h2 {
 
 h3 {
   font-size: 1rem;
+  font-weight: 800;
   line-height: 1;
   margin-top: 3rem;
 }
