--- a/css/style.css
+++ b/css/style.css
@@ -153,11 +153,7 @@ img.profile {
 
 
 body {
-  background-attachment: fixed;
-  background-color: #CBCCCB;
-/*  background-image: url("../img/Group_190.jpg");*/
-  background-position: center;
-  background-size: cover;
+  background-color: #EEF4F2;
 }
 
 
