--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,13 @@
 html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 125%;
+}
+
+@media only screen and (min-width : 767px) {
+  html, body {
   font-size: 112.5%;
+  }
 }
 
 body {
