--- a/css/style.css
+++ b/css/style.css
@@ -121,12 +121,12 @@ body {
   padding: 0;
 }
 
-section {
+/*section {
   margin: 0 auto;
   max-width: 36rem;
   padding: 1rem;
   width: 100%;
-}
+}*/
 
 header {
   align-items: flex-start;
@@ -136,6 +136,20 @@ header {
   flex-direction: column;
   height: 24rem;
   justify-content: flex-end;
+}
+
+main {
+  padding: 2rem 1rem;
+}
+
+footer {
+  background-position: center;
+  background-size: cover;
+  height: 24rem;
+}
+
+@media only screen and (min-width : 767px) {
+  footer { height: 32rem; }
 }
 
 img.profile {
@@ -156,23 +170,24 @@ img.profile {
 
 body {
   background-color: #EEF4F2;
+  background-color: #F0F0F0;
 }
 
 
 /* Text Styles */
 
 .name {
-  display: block;
+/*  display: block;*/
   font-family: "Cormorant Unicase", system-ui;
-  font-size: 1.25rem;
+/*  font-size: 1.25rem;*/
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: -1.5rem;
   text-transform: lowercase;
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 1.25rem;
   font-style: italic;
   font-weight: 500;
 /*  letter-spacing: -.1rem;*/
@@ -183,24 +198,25 @@ h1 {
 }
 
 @media only screen and (min-width : 767px) {
-  h1 { font-size: 3rem; }
+  h1 { font-size: 1rem; }
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-style: italic;
   font-weight: 500;
   line-height: 1.4;
-  margin-bottom: 2rem;
-  margin-top: 4rem;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
   text-transform: lowercase;
 }
 
 h3 {
-  font-size: 1rem;
+  font-size: .75rem;
   font-weight: 800;
   line-height: 1;
   margin-top: 3rem;
+  text-transform: uppercase;
 }
 
 img {
@@ -212,7 +228,7 @@ hr {
   background-color: var(--c-text);
   border: 0 none;
   height: 1px;
-  margin: 3rem 0;
+  margin: 2rem 0;
 }
 
 p {
