--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@
 html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 125%;
+  font-size: 112.5%;
 }
 
 @media only screen and (min-width : 767px) {
@@ -117,8 +117,9 @@ body {
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
+  max-width: 34rem;
+  padding: 1rem;
 }
 
 /*section {
@@ -141,7 +142,7 @@ header {
 main {
   margin: 0 auto;
   max-width: 36rem;
-  padding: 2rem 1rem;
+  
 }
 
 footer {
@@ -157,7 +158,7 @@ footer {
 img.profile {
   display: block;
   margin: 1rem auto;
-  width: 16rem;
+/*  width: 16rem;*/
 }
 
 @media only screen and (min-width : 767px) {
@@ -169,6 +170,26 @@ img.profile {
   }
 }
 
+.cover {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.image-frame {
+  background-color: #848D8A;
+  background-size: cover;
+  height: calc(100vh - 8rem);
+  width: calc(100vw - 2rem);
+}
+
+@media only screen and (min-width : 767px) {
+  .image-frame {
+    width: 100%;
+  }
+}
+
+
 
 body {
   background-color: #EEF4F2;
@@ -178,18 +199,24 @@ body {
 
 /* Text Styles */
 
-.name {
+h1 {
 /*  display: block;*/
   font-family: "Cormorant Unicase", system-ui;
-  font-size: .85rem;
+  font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
   margin-bottom: -1.5rem;
   text-transform: lowercase;
 }
 
-h1 {
-  font-size: 1.25rem;
+.cover h1 {
+  color: #ffffff;
+  text-align: center;
+}
+
+.name {
+  font-family: "Cormorant Garamond", serif;
+/*  font-size: 1rem;*/
   font-style: italic;
   font-weight: 500;
 /*  letter-spacing: -.1rem;*/
