Remove unused fonts

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   --c-white: #ffffff;
 }
 
-/* === */
+/* === 
 
 .cormorant-unicase-light {
   font-family: "Cormorant Unicase", system-ui;
@@ -96,6 +96,7 @@
   font-style: italic;
 }
 
+*/
 
 /* ===  */
 
