--- a/css/style.css
+++ b/css/style.css
@@ -150,17 +150,19 @@ header {
 }*/
 
 img.profile {
+/*  border-radius: 50%;*/
   display: block;
   margin: 1rem auto;
-/*  width: 16rem;*/
+  width: 12rem;
 }
 
 @media only screen and (min-width : 767px) {
   img.profile {
     float:right;
+    margin: 0 auto;
     margin-left: 2rem;
     width: 320px;
-    width: 16rem;
+    width: 12rem;
   }
 }
 
@@ -174,6 +176,7 @@ img.profile {
   background-color: #848D8A;
   background-size: cover;
   height: calc(100vh - 16rem);
+  margin: 2rem auto;
   width: 100%;
 }
 
