--- a/css/style.css
+++ b/css/style.css
@@ -166,12 +166,6 @@ img.profile {
   }
 }
 
-.cover {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
 .image-frame {
   background-color: #848D8A;
   background-size: cover;
@@ -180,6 +174,13 @@ img.profile {
   width: 100%;
 }
 
+.cover {
+  align-items: center;
+  display: flex;
+  height: 12rem;
+  justify-content: center;
+  margin-bottom: 4rem;
+}
 
 
 body {
@@ -194,7 +195,7 @@ h1 {
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
-  margin-bottom: -1.5rem;
+/*  margin-bottom: -1.5rem;*/
   text-transform: lowercase;
 }
 
@@ -244,7 +245,11 @@ hr {
   background-color: var(--c-text);
   border: 0 none;
   height: 1px;
-  margin: 2rem 0;
+  margin: 2rem 12rem;
+}
+
+@media only screen and (min-width : 767px) {
+  hr { margin: 2rem 16rem; }
 }
 
 p {
@@ -277,6 +282,8 @@ nav p { line-height: 2; }
 
 nav a { text-decoration: none; }
 nav a:hover { text-decoration: underline; }
+
+.cta { text-align: right; }
 
 
 
