--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ img.profile {
 .image-frame {
   background-color: #848D8A;
   background-size: cover;
-  height: calc(100vh - 16rem);
+  height: 8rem;
   margin: 2rem auto;
   width: 100%;
 }
@@ -177,7 +177,7 @@ img.profile {
 .cover {
   align-items: center;
   display: flex;
-/*  height: 12rem;*/
+  min-height: 16rem;
   justify-content: center;
   margin-bottom: 4rem;
 }
