Update text, pic

--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ img.profile {
   img.profile {
     float:right;
     margin: 0 auto;
+    margin-bottom: 2rem;
     margin-left: 2rem;
     width: 320px;
     width: 12rem;
@@ -177,7 +178,8 @@ img.profile {
 .cover {
   align-items: center;
   display: flex;
-  min-height: 16rem;
+/*  min-height: 16rem;*/
+  min-height: 66vh;
   justify-content: center;
   margin-bottom: 4rem;
 }
@@ -245,7 +247,8 @@ hr {
   background-color: var(--c-text);
   border: 0 none;
   height: 1px;
-  margin: 2rem 8rem;
+/*  margin: 2rem 8rem;*/
+  margin: 2rem 0;
 }
 
 @media only screen and (min-width : 767px) {
