--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,13 @@ nav a:hover { text-decoration: underline; }
 
 .cta { text-align: center; }
 
+table td {
+  display: inline-block;
+  margin-bottom: .5rem;
+  min-width: 5rem;
+  vertical-align: top;
+}
+
 
 
 @media only screen and (min-width : 767px) {
